Fix alignment of question

--- a/pages/start/start.css
+++ b/pages/start/start.css
@@ -29,18 +29,22 @@ body {
     gap: 1.5rem;
 }
 
-#q1 h1 {
+#question {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+#question h1 {
     margin: 0;
     width: 90%;
     max-width: 100vw;
     font-size: 1.5rem;
 }
 
-#q1 p {
-    margin: 0;
+#question p {
     width: 90%;
     max-width: 100vw;
-    margin-top: 0;
     margin-bottom: 2rem;
 }
 
@@ -126,17 +130,15 @@ form {
         font-size: 16px;
     }
 
-    #q1 h1 {
+    #question h1 {
         width: 80%;
         max-width: 80vw;
         font-size: 2em;
     }
 
-    #q1 p {
+    #question p {
         width: 80%;
         max-width: 80vw;
-        margin-top: 0;
-        margin-bottom: 2rem;
     }
 
     .labels {
